// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIComposition5> renders basic example 1`] = `
<div
  className="xui-composition xui-composition-5 xui-composition-is-finite"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;

exports[`<XUIComposition5> should do nothing with children 1`] = `
<div
  className="xui-composition xui-composition-5 xui-composition-is-finite"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;

exports[`<XUIComposition5> should include custom class and omit width-limiting class, if specified 1`] = `
<div
  className="xui-composition xui-composition-5 single-with-head"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;
